// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/DexPage/actions/checkTimeoutEvent should checkTimeoutEvent should create checkTimeoutEvent action 1`] = `
Object {
  "type": "atomicapp/DexPage/CHECK_TIMEOUT_EVENT",
}
`;

exports[`containers/DexPage/actions/checkUpdateSwapEvent should checkUpdateSwapEvent should create checkUpdateSwapEvent action 1`] = `
Object {
  "type": "atomicapp/DexPage/CHECK_UPDATE_SWAP_EVENT",
}
`;

exports[`containers/DexPage/actions/clickSelectCoinModal should clickSelectCoinModal should create clickSelectCoinModal action 1`] = `
Object {
  "payload": Object {
    "name": "Komodo",
    "symbol": "KMD",
  },
  "type": "atomicapp/DexPage/SELECT_COIN_MODAL_CLICK",
}
`;

exports[`containers/DexPage/actions/closeDetailModal should closeDetailModal should create closeDetailModal action 1`] = `
Object {
  "type": "atomicapp/DexPage/SWAP_DETAIL_MODAL_CLOSE",
}
`;

exports[`containers/DexPage/actions/closeSelectCoinModal should closeSelectCoinModal should create closeSelectCoinModal action 1`] = `
Object {
  "type": "atomicapp/DexPage/SELECT_COIN_MODAL_CLOSE",
}
`;

exports[`containers/DexPage/actions/loadBestPrice should loadBestPrice should create loadBestPrice action 1`] = `
Object {
  "payload": Object {
    "address": "",
    "age": 0,
    "avevolume": 0,
    "base": "COQUI",
    "bestPrice": 0,
    "depth": 0,
    "maxvolume": 0,
    "numutxos": 0,
    "price": 0,
    "pubkey": "",
    "rel": "PIZZA",
    "zcredits": 0,
  },
  "type": "atomicapp/DexPage/LOAD_BEST_PRICE",
}
`;

exports[`containers/DexPage/actions/loadBuyCoin should loadBuyCoin should create loadBuyCoin action 1`] = `
Object {
  "payload": Object {
    "amount": 1.234,
    "basecoin": "BTC",
    "paymentcoin": "KMD",
  },
  "type": "atomicapp/DexPage/LOAD_BUY_COIN",
}
`;

exports[`containers/DexPage/actions/loadBuyCoinError should loadBuyCoin should create loadBuyCoinError action 1`] = `
Object {
  "error": Object {
    "message": "Value is large than balance",
  },
  "type": "atomicapp/DexPage/LOAD_BUY_COIN_ERROR",
}
`;

exports[`containers/DexPage/actions/loadPrice should loadPrice should create loadPrice action 1`] = `
Object {
  "payload": Object {
    "coin": "coin",
  },
  "type": "atomicapp/DexPage/LOAD_PRICE",
}
`;

exports[`containers/DexPage/actions/loadPrices should loadPrices should create loadPrices action 1`] = `
Object {
  "type": "atomicapp/DexPage/LOAD_PRICES",
}
`;

exports[`containers/DexPage/actions/loadPricesSuccess should loadPricesSuccess should create loadPricesSuccess action 1`] = `
Object {
  "type": "atomicapp/DexPage/LOAD_PRICES_SUCCESS",
}
`;

exports[`containers/DexPage/actions/makeANewSwap should makeANewSwap should create makeANewSwap action 1`] = `
Object {
  "type": "atomicapp/DexPage/SWAP_MAKE_A_NEW",
}
`;

exports[`containers/DexPage/actions/openDetailModal should openDetailModal should create openDetailModal action 1`] = `
Object {
  "payload": Object {
    "uuid": undefined,
  },
  "type": "atomicapp/DexPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/DexPage/actions/openDetailModal should openDetailModal should create openDetailModal action 2`] = `
Object {
  "payload": Object {
    "uuid": "uuid",
  },
  "type": "atomicapp/DexPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/DexPage/actions/openSelectCoinModal should openSelectCoinModal should create openSelectCoinModal action 1`] = `
Object {
  "type": "atomicapp/DexPage/SELECT_COIN_MODAL_OPEN",
}
`;

exports[`containers/DexPage/actions/selectCoinPayment should selectCoinPayment should create selectCoinPayment action 1`] = `
Object {
  "payload": Object {
    "name": "Komodo",
    "symbol": "KMD",
  },
  "type": "atomicapp/DexPage/COIN_PAYMENT_SELECT",
}
`;

exports[`containers/DexPage/actions/timeoutSwap should timeoutSwap should create timeoutSwap action 1`] = `
Object {
  "payload": Object {
    "alice": "BEER",
    "bob": "COQUI",
    "id": 3624682363,
    "quoteid": 0,
    "requestid": 0,
    "uuid": "bc5e1509b2aea898b8dff71ecc3fa7d5bc7c361fb14187fe9bc06916fae63811",
  },
  "type": "atomicapp/DexPage/SWAP_TIMEOUT",
}
`;
